--- a/pom.xml
+++ b/pom.xml
@@ -11,22 +11,18 @@
     <groupId>com.example</groupId>
     <artifactId>books</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>books</name>
     <description>books</description>
+    <modules>
+        <module>books_generator</module>
+        <module>books_server</module>
+    </modules>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
